--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^3.9.2",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
+    "vue": "^2.6.11",
     "vuex": "^3.4.0",
     "webpack": "^4.43.0"
   },
