--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,9 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
-    "vue-class-store": "file:.."
+    "vue-class-store": "^1.0.0-beta-3",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -18,10 +20,7 @@
     "sloc": "^0.2.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.2",
-    "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
-    "vue": "^2.6.11",
-    "vuex": "^3.4.0",
     "webpack": "^4.43.0"
   }
 }
