--- a/demo/package.json
+++ b/demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-class-store-demo",
   "scripts": {
-    "demo": "npx poi src/index.ts --serve --open"
+    "demo": "npx poi src/index.ts --serve"
   },
   "dependencies": {
     "vue": "^2.6.11",
