--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-class-store",
-  "description": "Zero-boilerplate class-based stores for Vue",
-  "version": "1.0.0-beta-5",
+  "description": "Fully-reactive, zero-boilerplate class-based stores for Vue",
+  "version": "1.0.0-beta-6",
   "author": "Dave Stewart",
   "license": "ISC",
   "main": "dist/vue-class-store.js",
@@ -17,6 +17,7 @@
   "scripts": {
     "dev": "rollup -c build/rollup.js -w",
     "build": "rollup -c build/rollup.js",
+    "demo": "cd demo && npm run demo",
     "stats": "node dev/stats.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
