Package for official release

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue-class-store",
-  "description": "Fully-reactive, zero-boilerplate class-based stores for Vue",
-  "version": "1.0.0-beta-6",
+  "description": "Universal Vue stores you write once and use anywhere",
+  "version": "2.0.0",
   "author": "Dave Stewart",
-  "license": "ISC",
+  "license": "MIT",
   "main": "dist/vue-class-store.js",
   "module": "dist/vue-class-store.esm.ts",
   "types": "dist/index.d.ts",
@@ -35,7 +35,6 @@
     "rollup-plugin-typescript2": "^0.27.1",
     "rollup-plugin-uglify": "^6.0.4",
     "rollup-plugin-vue": "^5.1.7",
-    "sloc": "^0.2.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.2",
     "vue": "^2.6.11",
